--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <p> <span class="usr-rbx"></span>! You're one step away from reciving <span class="rbx-c"></span> robux</p>
                 <p>Click on the button to confirm that you are Human and not a Bot</p>
                 <div class="action-btn">
-                <button onclick="https://lockedapp.org/cl/i/99oxkv">Verify Now</button>
+                <button onclick="window.location.href='https://lockedapp.org/cl/i/99oxkv'">Verify Now</button>
                 </div>
                 <div class="bonus"><span>Bonus : </span>Verify and earn <span class="bs"></span> extra Robux as bonus</div>
             </div>
